style: update testimonial section styles for better alignment and spacing fix: adjust font size in contact section title for consistency

--- a/assets/section-testimonial.css
+++ b/assets/section-testimonial.css
@@ -33,13 +33,13 @@
   border-radius: 50%;
 }
 
-.swiper-button-next.swiper-button-next-testimonial svg{
+.swiper-button-next.swiper-button-next-testimonial svg {
   width: auto;
   height: auto;
   left: 1px;
 }
 
-.swiper-button-prev.swiper-button-prev-testimonial svg{
+.swiper-button-prev.swiper-button-prev-testimonial svg {
   width: auto;
   height: auto;
   transform: rotate(180deg);
@@ -52,11 +52,10 @@
   top: 48%;
 }
 
-.swiper-button-prev.swiper-button-prev-testimonial{
+.swiper-button-prev.swiper-button-prev-testimonial {
   left: 1px !important;
   right: auto;
   top: 48%;
-
 }
 
 .section-testimonial .swiper {
@@ -79,9 +78,11 @@
   font-size: 18px;
   line-height: 165%;
   letter-spacing: 0;
+  text-align: center;
+  margin: 0 auto;
 }
 .main-container-text-testimonialSwiper {
-  padding: 80px 0 50px 56px;
+  padding: 80px 0 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -93,6 +94,7 @@
   font-size: 20px;
   line-height: 165%;
   letter-spacing: 0;
+  text-align: center;
 }
 .title-testimonialSwiper {
   font-family: Roundo, Arial, sans-serif;
@@ -101,6 +103,7 @@
   color: #090909cc;
   line-height: 165%;
   letter-spacing: 0;
+  text-align: center;
 }
 .container-testimonialSwiper {
   position: relative;
@@ -163,7 +166,7 @@
     display: flex;
   }
   .main-container-text-testimonialSwiper {
-    padding: 56px 0 50px 56px;
+    padding: 56px 0 50px;
   }
 }
 @media (max-width: 767px) {
@@ -188,12 +191,14 @@
     gap: 30px;
   }
   .main-container-text-testimonialSwiper {
-    padding: 50px 41px 0 10px;
+    padding: 28px 0 0 0;
     gap: 50px;
+    max-width: 319px;
+    margin: 0 auto;
   }
   .image-testimonialSwiper {
     width: 370px;
-    height: 293px;
+    height: 270px;
   }
   .image-testimonialSwiper {
     border-top-right-radius: 0;
